<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MatrixHelper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="instruc1">Choose the Number of Rows and Columns</string>
    <string name="btnOne">The Richard Button</string>
    <string name="btnTwo">Create Matrix</string>
    <string name="rowTxt">How many rows/Cols?</string>
    <string name="mainMenu">Return to the Menu</string>
    <string name="test">what does the fox say?</string>

    <string-array name="row_col_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_enter_matrix">EnterMatrix</string>
    <string name="title_activity_input_values">InputValues</string>
    <string name="okeh">OKEH</string>
    <string name="pls">Please enter the element in row</string>
    <string name="pliss">Row 0, Column 0</string>
    <string name="oneone">Row 1, Column 1</string>
    <string name="zero">0</string>
    <string name="title_activity_determinant_calc">DeterminantCalc</string>
    <string name="menu1">Determinant Calculator</string>
    <string name="title_activity_input_single_matrix">InputSingleMatrix</string>
    <string name="description">holds the image</string>
    <string name="title_activity_full_image_Activity">Viewing Full sized Image</string>

</resources>
