<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeterminantCalc" >
     <Button
         android:id="@+id/mainMenu1"
         android:layout_width="178dp"
         android:layout_height="wrap_content"
         android:background="@color/mainMenu"
         android:onClick="mainMenuClicked"
         android:text="@string/mainMenu" />
    <TextView
        android:id="@+id/txtOne"
        android:layout_below="@id/mainMenu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruc1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="goToEnterMatrix"
        android:text="@string/btnTwo" />
     <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button2"
        android:onClick="goToSingleMatrix"
        android:text="@string/test" />
    
	<TextView
	    android:layout_below="@id/txtOne"
	    android:id="@+id/txtTwo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/rowTxt"/>

	
	
	
	
	
	
	
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTwo" />

</RelativeLayout>
