<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="test"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    
    
    
    
    
    <TextView
        android:id="@+id/txtOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruc1" />

    
    


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="test"
        android:text="@string/btnOne" />
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button1"
        android:onClick="goToEnterMatrix"
        android:text="@string/btnTwo"/>
    
    
    
    
	<TextView
	    android:layout_below="@id/txtOne"
	    android:id="@+id/txtTwo"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/rowTxt"/>
	<TextView
	    android:layout_below="@id/txtOne"
	    android:id="@+id/txtThree"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/colTxt"
	    android:layout_centerHorizontal="true"/>
	
	
	
	
	
	
	
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTwo" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtTwo" />

</RelativeLayout>